--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "proxyquire": "^2.1.3",
     "sinon-chai": "^3.5.0",
     "sinon": "^8.1.1"
+    "gatttool": "^1.0.0"
   },
   "main": "main.js",
   "scripts": {
