--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "mocha": "^7.1.2",
     "proxyquire": "^2.1.3",
     "sinon-chai": "^3.5.0",
-    "sinon": "^8.1.1"
-    "gatttool": "^1.0.0"
+    "sinon": "^8.1.1",
+    "gatttool": "^1.0.1"
   },
   "main": "main.js",
   "scripts": {
